Intermittent/couchdb/Nocache/envoy_rtr0.yaml
static_resources:
  listeners:
  - name: listen_tcp_unreliablePath
    address:
      socket_address:
        protocol: TCP
        address: 0.0.0.0
        port_value: 18080
    filter_chains:
#    - transport_socket:
#        name: envoy.transport_sockets.tls
#        typed_config:
#          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
#          common_tls_context:
#            tls_certificates:
#              - certificate_chain:
#                  filename: "/etc/envoy/nginx-certificate.crt"
#                private_key:
#                  filename: "/etc/envoy/nginx-private.key"
#            alpn_protocols: ["h2,http/1.1"]
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          access_log:
          - name: envoy.access_loggers.stdout
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
          codec_type: AUTO
          stat_prefix: tcp_rtr0_nginx_http1_unreliable
          http_protocol_options:
            allow_chunked_length: true
          route_config:
            name: local_route
            virtual_hosts:
            - name: backend_unreliable
              domains:
              - "*"
              routes:
              - match:
                  connect_matcher: {}
                route:
                  timeout: 0s
                  idle_timeout: 0s
                  max_stream_duration:
                     max_stream_duration: 0s
                  upgrade_configs:
                  - upgrade_type: CONNECT
                    connect_config: {}
                     
                  retry_policy:
                      retry_on: 5xx,refused-stream,connect-failure,gateway-error,reset
                      num_retries: 2
                      per_try_timeout: 25s                                     
                  cluster: nginx_srvr_http1_unreliable
              
              - match:
                  prefix: "/"
                route:
                #return 503 after 12m                
                  timeout: 0s
                  idle_timeout: 0s
                  max_stream_duration:
                     max_stream_duration: 0s
                  
                  retry_policy:
                      retry_on: 5xx,refused-stream,connect-failure,gateway-error,reset
                      num_retries: 2
                      per_try_timeout: 25s                
                  cluster: nginx_srvr_http1_unreliable
          http_filters:               
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          http_protocol_options: {}           
#          http2_protocol_options:
#            allow_connect: true
          upgrade_configs:
          - upgrade_type: CONNECT 

  clusters:
  - name: nginx_srvr_http1_unreliable
    type: STATIC
    lb_policy: ROUND_ROBIN
#    http2_protocol_options: {}
    load_assignment:
      cluster_name: nginx_srvr_http1_unreliable
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 192.168.14.1
                port_value: 18080
#    transport_socket:
#      name: envoy.transport_sockets.tls
#      typed_config:
#        "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
